<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="280dp"
        app:cardCornerRadius="10dp"
        android:layout_margin="10dp"
        android:clickable="true"
        app:cardElevation="7dp"
        android:focusable="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/bin_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="12dp"
                android:text="@string/bin"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/bin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/primary_text"
                app:layout_constraintStart_toEndOf="@id/bin_text"
                app:layout_constraintTop_toTopOf="@id/bin_text"
                tools:text="12345678"/>

            <TextView
                android:id="@+id/scheme_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scheme_network"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@id/bin_text"
                app:layout_constraintStart_toStartOf="@id/bin_text" />

            <TextView
                android:id="@+id/scheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_text"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                app:layout_constraintStart_toStartOf="@id/bin_text"
                app:layout_constraintTop_toBottomOf="@id/scheme_text"
                tools:text="Visa" />

            <TextView
                android:id="@+id/brand_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brand"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@id/bin_text"
                app:layout_constraintTop_toBottomOf="@id/scheme" />

            <TextView
                android:id="@+id/brand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_text"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                app:layout_constraintStart_toStartOf="@id/bin_text"
                app:layout_constraintTop_toBottomOf="@id/brand_text"
                tools:text="Visa/Dankort" />

            <TextView
                android:id="@+id/card_number_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_number"
                android:textSize="12sp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="@id/bin_text"
                app:layout_constraintTop_toBottomOf="@id/brand" />

            <TextView
                android:id="@+id/length_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/length"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@id/bin_text"
                app:layout_constraintTop_toBottomOf="@id/card_number_text" />

            <TextView
                android:id="@+id/length"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_text"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                app:layout_constraintStart_toStartOf="@id/bin_text"
                app:layout_constraintTop_toBottomOf="@id/length_text"
                tools:text="16" />

            <TextView
                android:id="@+id/luhn_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/luhn"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@id/length_text"
                app:layout_constraintEnd_toStartOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/card_number_text" />

            <TextView
                android:id="@+id/luhn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_text"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                app:layout_constraintStart_toStartOf="@id/luhn_text"
                app:layout_constraintTop_toBottomOf="@id/luhn_text"
                tools:text="Yes" />

            <TextView
                android:id="@+id/bank_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bank"
                android:textSize="12sp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="@id/bin_text"
                app:layout_constraintTop_toBottomOf="@id/length" />

            <TextView
                android:id="@+id/bank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_text"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                app:layout_constraintStart_toStartOf="@id/bin_text"
                app:layout_constraintTop_toBottomOf="@id/bank_text"
                tools:text="Jyske Bank, Hjørring" />

            <TextView
                android:id="@+id/site"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_text"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                app:layout_constraintStart_toStartOf="@id/bin_text"
                app:layout_constraintTop_toBottomOf="@id/bank"
                tools:text="www.jyskebank.dk"
                android:autoLink="web"/>

            <TextView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_text"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                app:layout_constraintStart_toStartOf="@id/bin_text"
                app:layout_constraintTop_toBottomOf="@id/site"
                tools:text="+4589893300"
                android:autoLink="phone"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="250dp" />



            <TextView
                android:id="@+id/type_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:textSize="12sp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintBottom_toTopOf="@id/type" />

            <TextView
                android:id="@+id/type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_text"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/type_text"
                app:layout_constraintTop_toBottomOf="@+id/type_text"
                tools:text="Debit" />

            <TextView
                android:id="@+id/prepaid_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prepaid"
                android:textSize="12sp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="@id/type_text"
                app:layout_constraintTop_toBottomOf="@id/type" />

            <TextView
                android:id="@+id/prepaid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_text"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/type_text"
                app:layout_constraintTop_toBottomOf="@+id/prepaid_text"
                tools:text="NO" />

            <TextView
                android:id="@+id/country_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country"
                android:textSize="12sp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="@id/type_text"
                app:layout_constraintTop_toBottomOf="@id/prepaid" />

            <TextView
                android:id="@+id/country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_text"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/type_text"
                app:layout_constraintTop_toBottomOf="@+id/country_text"
                tools:text="Denmark" />

            <TextView
                android:id="@+id/latitude_longitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latitude"
                android:textColor="#05c5cf"
                android:textSize="12sp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="@id/type_text"
                app:layout_constraintTop_toBottomOf="@id/country" />



        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>